--- a/main.scss
+++ b/main.scss
@@ -175,7 +175,7 @@ nav {
 
 section {
     color: #fff;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
     h2 {
         text-align: center;
     }
@@ -255,7 +255,7 @@ section {
 /* 2nd section */
 
 .location .wrapper {
-    padding-bottom: 70px;
+    // padding-bottom: 70px;
     // border-bottom: 1px solid #eee;
     img {
         margin-top: 35px;
