change colors of port landing page sect

--- a/main.scss
+++ b/main.scss
@@ -270,6 +270,8 @@ section {
 
 // portfolio section
 .projects:nth-child(3) {
+    background-color: #9ADBFF;
+    color: #4D6E7F;
     margin-top: 1.5em;
     h2 {
         padding: 0px 0px 5px;
