--- a/main.scss
+++ b/main.scss
@@ -294,6 +294,10 @@ section {
 
 .projects:nth-child(2) {
     padding-bottom: 2em;
+
+    .col-md-6 {
+        margin-bottom: 1em;
+    }
 }
 
 .projects {
