less margin here

--- a/main.scss
+++ b/main.scss
@@ -274,7 +274,8 @@ section {
     color: #4D6E7F;
     padding-top: 1.5em;
     h2 {
-        padding: 0px 0px 5px;
+        padding: 0 0 5px;
+        margin-bottom: 0;
     }
 
     p {
