--- a/main.scss
+++ b/main.scss
@@ -136,7 +136,7 @@ nav {
 .btn {
     text-transform: uppercase;
     display: inline-block;
-    margin-top: 30px;
+    margin-top: 20px;
     padding: 10px 30px;
     background-color: $gray;
     color: #fff;
@@ -162,6 +162,11 @@ nav {
 .projects:nth-child(4) {
     background-color: #9ADBFF;
     color: #4D6E7F;
+
+
+    .project a:last-child {
+        color: #000;
+    }
 }
 
 .location,
@@ -281,15 +286,15 @@ section {
     p {
         padding: 0 15px;
     }
+
+    .project a:last-child {
+        color: #000;
+    }
 }
 
 .btn-row {
     @extend .row;
     text-align: center;
-
-    .btn {
-        margin: -10px;
-    }
 
 }
 
@@ -332,6 +337,7 @@ section {
         font-size: 1.23em;
     }
     .col-md-6 {
+        margin-bottom: 1em;
         padding: 0 30px;
         text-align: center;
     }
