--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,8 @@ body {
 /* header */
 
 header {
+    background: url(../img/river.jpg) no-repeat center center;
+    background-size: cover;
     text-align: center;
     height: 500px;
     color: #fff;
