using forest img

--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ body {
 /* header */
 
 header {
-    background: url(../img/river.jpg) no-repeat center center;
+    background: url(../img/forest.jpg) no-repeat center center;
     background-size: cover;
     text-align: center;
     height: 500px;
