--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,7 @@
 // normalize is here
+
+// try using padding instead of fixed heights? 
+
 @import "grid";
 $gray: #A1ACB2;
 html,
@@ -368,7 +371,6 @@ section {
 /* footer */
 
 footer {
-    height: 120px;
     background-color: #000;
     color: #fff;
     text-align: center;
@@ -376,7 +378,7 @@ footer {
         width: 75px;
     }
     .wrapper {
-        padding-top: 20px;
+        padding: 20px 0 23px;;
     }
     ul {
         padding: 0;
