--- a/style.scss
+++ b/style.scss
@@ -33,8 +33,8 @@ header {
     color: #fff;
     padding-top: 100px;
     h2 {
-        font-size: 3.2em;
-        margin: 0;
+        font-size: 2.8em;
+        margin: 0 20px;
         text-transform: uppercase;
         /* stroke from CSS tricks */
         text-shadow: 3px 3px 0 #000, /* Simulated effect for Firefox and Opera
