less margin for links

--- a/style.scss
+++ b/style.scss
@@ -296,6 +296,7 @@ section {
 
     .project a {
         // smaller than 1em margin here
+        margin-top: 0.5em;
         color: #000;
     }
 }
