--- a/style.scss
+++ b/style.scss
@@ -298,6 +298,10 @@ section {
         margin-top: 0.5em;
         color: #000;
     }
+
+    .project a:hover {
+        color: #4D6E7F;
+    }
 }
 
 .btn-row {
