--- a/style.scss
+++ b/style.scss
@@ -174,6 +174,10 @@ nav {
     .project a:last-child {
         color: #000;
     }
+
+    .project a:last-child:hover {
+        color: #4D6E7F;
+    }
 }
 
 .location,
@@ -333,6 +337,10 @@ section {
             display: inline-block;
             font-size: 1.2em;
             color: #9ADBFF;
+        }
+
+        a:hover {
+            color: #000;
         }
         p {
             width: auto;
