--- a/style.scss
+++ b/style.scss
@@ -175,6 +175,7 @@ nav {
         color: #000;
     }
 
+    // gotta be a way to not dup this code
     .project a:last-child:hover {
         color: #4D6E7F;
     }
