--- a/style.scss
+++ b/style.scss
@@ -317,7 +317,7 @@ section {
     .project {
         @extend .col-md-6;
         a {
-            margin-top: 1em;
+            margin-top: 0.5em;
             display: inline-block;
             font-size: 1.2em;
             color: #9ADBFF;
@@ -333,6 +333,9 @@ section {
         }
 
         @media screen and (min-width: 1024px) {
+            a {
+                margin-top: 1em;
+            }
             p {
                 width: auto;
                 margin-bottom: -10px;
