making links block seesm to fix some stuff

--- a/style.scss
+++ b/style.scss
@@ -316,7 +316,7 @@ section {
         @extend .col-md-6;
         a {
             margin-top: 0.5em;
-            display: inline-block;
+            display: block;
             font-size: 1.2em;
             color: #9ADBFF;
         }
