--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,8 @@
 @import "grid";
 $gray: #A1ACB2;
 $dark-blue: #4D6E7F;
+$light-blue: #9ADBFF;
+
 html,
 body {
     margin: 0;
@@ -164,7 +166,7 @@ nav {
 /* all sections */
 
 .projects:nth-child(4), .projects:nth-child(3) {
-    background-color: #9ADBFF;
+    background-color: $light-blue;
     color: $dark-blue;
 #4D6E7F;
 
@@ -328,7 +330,7 @@ section {
             margin-top: 0.5em;
             display: block;
             font-size: 1.2em;
-            color: #9ADBFF;
+            color: $light-blue;
         }
 
         a:hover {
