--- a/style.scss
+++ b/style.scss
@@ -280,6 +280,7 @@ section {
 }
 
 // portfolio section
+// specific part for landing pages
 .projects:nth-child(3) {
     padding-top: 1.5em;
     h2 {
