switched around intro sect

--- a/style.scss
+++ b/style.scss
@@ -274,7 +274,7 @@ section {
     // padding-bottom: 70px;
     // border-bottom: 1px solid #eee;
     img {
-        margin-top: 35px;
+        margin-bottom: 40px;
     }
 }
 
