--- a/style.scss
+++ b/style.scss
@@ -355,6 +355,10 @@ section {
             }
         }
     }
+    h1 {
+        text-align: center;
+        padding-top: 50px;
+    }
     h2 {
         padding-top: 50px;
         text-align: center;
