--- a/style.scss
+++ b/style.scss
@@ -363,6 +363,9 @@ section {
         padding-top: 50px;
         text-align: center;
     }
+    h2:nth-child(2) {
+        padding-top:0;
+    }
     p {
         text-align: center;
         margin: 10px auto;
