--- a/style.scss
+++ b/style.scss
@@ -358,10 +358,12 @@ section {
     h1 {
         text-align: center;
         padding-top: 50px;
+        font-size: 2.2em;
     }
     h2 {
         padding-top: 50px;
         text-align: center;
+        text-decoration: underline;
     }
     h2:nth-child(2) {
         padding-top:0;
