--- a/style.scss
+++ b/style.scss
@@ -363,6 +363,7 @@ section {
     h2 {
         padding-top: 50px;
         text-align: center;
+        // could underline the h1 instead
         text-decoration: underline;
     }
     h2:nth-child(2) {
