--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,9 @@
 // normalize is here
 // try using padding instead of fixed heights? 
+
+// TODO:
+// nesting media queries, using & for hovers
+
 @import "grid";
 $gray: #A1ACB2;
 $dark-blue: #4D6E7F;
